# Quad

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.claude/hooks/: hook-utils.mjs  pre-tool-use.mjs  session-start.mjs
config/: config.default.yaml  config.local.yaml
src/quad/: __init__.py  __main__.py
src/quad/ai/: __init__.py  analysis.py  context.py  groq.py  prompt.py  strategist.py  ta.py
src/quad/backtesting/: __init__.py  engine.py  models.py
src/quad/bot/: __init__.py  bot.py  commands.py  jobs.py
src/quad/cli/: __init__.py  app.py
src/quad/config/: __init__.py  manager.py  schema.py
src/quad/exchange/: __init__.py  base.py  binance.py  factory.py  mock.py  paper.py
src/quad/execution/: __init__.py  engine.py  gateway.py  reconciler.py  twap.py
src/quad/market_data/: __init__.py  buffers.py  cache.py  engine.py  historical.py  websocket.py
src/quad/monitoring/: __init__.py  health.py  metrics.py
src/quad/orchestrator/: __init__.py  orchestrator.py
src/quad/persistence/: __init__.py  database.py  models.py  repositories.py
src/quad/risk/: __init__.py  circuit_breakers.py  exposure.py  gates.py  manager.py  sizing.py
src/quad/strategy/: __init__.py  base.py  cash_secured_put.py  covered_call.py  factory.py  iron_condor.py  straddle.py  strangle.py  vertical_spread.py
src/quad/tradingview/: __init__.py  parser.py  signals.py
src/quad/types/: __init__.py  domain.py  exchange.py  market.py  risk.py  strategy.py
