[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quad"
version = "0.1.0"
description = "Production-grade open-source options trading bot for Binance Options"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["trading", "options", "binance", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "typer>=0.12.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0",
    "python-telegram-bot>=20.0",
    "groq>=0.4.0",
]

[project.scripts]
quad = "quad.cli:app"

[project.gui-scripts]
quad-bot = "quad.__main__:main"

[project.entry-points."quad.strategies"]

[tool.setuptools.packages.find]
where = ["src"]
